adding login method
